--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,119 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context="com.apkglobal.theweatherapp.MainActivity"
-    android:background="#1b1818">
+   android:padding="16dp"
+    android:background="#1f2325"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/cityText"
         android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Kanpur,IN"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"/>
+        android:layout_centerHorizontal="true"
+        android:text="City of Spokane, US"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <ImageView
         android:id="@+id/thumbnailIcon"
+        android:layout_below="@+id/cityText"
+        android:layout_marginTop="10dp"
+
+
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@id/cityText"
-        android:background="@color/colorAccent"
-        android:layout_marginTop="10dp"/>
+        android:layout_height="100dp" />
+
     <TextView
         android:id="@+id/tempText"
-        android:textColor="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="12 Deg"
-        android:layout_below="@id/cityText"
-        android:layout_toRightOf="@id/thumbnailIcon"
-        android:layout_centerHorizontal="true"
-        android:textSize="48sp"
+        android:layout_marginTop="25dp"
+        android:text="12 deg"
         android:textStyle="normal"
-        android:layout_marginTop="10dp"/>
+        android:textSize="40sp"
+        android:textColor="#fff"
+        android:layout_below="@+id/cityText"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/rainText"
+        android:textSize="16sp"
+        android:textColor="#fff"
+        android:text=""
+        android:layout_below="@+id/thumbnailIcon"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/windText"
+        android:layout_below="@+id/rainText"
+        android:layout_marginTop="35dp"
+        android:textColor="#fff"
+        android:text="Wind"
+        android:textSize="16sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/cloudText"
+        android:textSize="16sp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/windText"
+        android:textColor="#fff"
+        android:text="Cloudness"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/pressureText"
+        android:textSize="16sp"
+        android:layout_marginTop="5dp"
+        android:textColor="#fff"
+        android:text="Pressure"
+        android:layout_below="@+id/cloudText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/humidText"
+        android:textSize="16sp"
+        android:text="Humidity"
+        android:layout_marginTop="5dp"
+        android:textColor="#fff"
+        android:layout_below="@+id/pressureText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/riseText"
+        android:text="Sunrise"
+        android:textSize="16sp"
+        android:textColor="#fff"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/humidText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/setText"
+        android:text="Sunrise"
+        android:layout_marginTop="5dp"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:layout_below="@+id/riseText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    <TextView
+        android:id="@+id/updateText"
+        android:text="Last update"
+        android:layout_alignParentBottom="true"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 </RelativeLayout>
